--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -23,32 +23,33 @@
     "@reduxjs/toolkit": "^2.3.0",
     "expo": "^51.0.38",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-dev-client": "~4.0.29",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "^0.19.13",
+    "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-dom": "18.2.0",
+    "@types/react": "~18.2.79",
+    "@types/react-dom": "~18.2.25",
     "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
