--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "collegementor",
+    "name": "yasaswini-CM",
     "slug": "collegementor",
     "version": "1.0.0",
     "orientation": "portrait",
